# liger

./: .Rbuildignore  .covrignore  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  appveyor.yml  cleanup  cleanup.ucrt  codecov.yml  configure  configure.ucrt  cran-comments.md  edge7038976.txt  feature.txt  liger-vignette.html  travis_setup.sh  walkthrough_pbmc.html  walkthrough_rna_atac.html
R/: ATAC.R  Analogizer.R  DEG_marker.R  DoubletFinder.R  GSEA.R  IO.R  RcppExports.R  aaa.R  archive.R  cINMF.R  classConversion.R  classes.R  clustering.R  data.R  density.R  deprecated.R  differentialExpression.R  dotplot.R  downsample.R  downstream.R  embedding.R  factorGSEA.R  factorMarker.R  factorization.R  generics.R  getFactorMarkers.R  ggplotting.R  h5Utility.R  h5ad.R  heatmap.R  import.R  imputeKNN.R  integration.R  leiden2.R  liger-class.R  liger-methods.R  liger.R  ligerCommand-class.R  ligerCommand_relates.R  ligerDataset-class.R  (+41 more)
cmake/: CPM.cmake  FindR.cmake  FindRModule.cmake
data/: bmmc.rda  ccGeneHuman.rda  ctrl.rda  deg.marker.rda  deg.pw.rda  pbmc.rda  pbmcPlot.rda  stim.rda
docs/: 404.html  LICENSE-text.html  README.md  authors.html  extra.css  index.html  pkgdown.yml  search.json  sitemap.xml
man/: Analogizer-package.Rd  AnalogizerToSeurat.Rd  H5Apply.Rd  Matrix.column_norm.Rd  SNF.Rd  aggregateByCluster.Rd  alignFactors.Rd  alignment_metric.Rd  alignment_metric_per_cluster.Rd  alignment_metric_per_factor.Rd  analogizer.Rd  as.liger.Rd  as.ligerDataset.Rd  as.seurat.Rd  bmmc.Rd  c.liger.Rd  calcARI-deprecated.Rd  calcARI.Rd  calcAgreement-deprecated.Rd  calcAgreement.Rd  calcAlignment.Rd  calcAlignmentPerCluster-deprecated.Rd  calcAlignmentPerCluster.Rd  calcDatasetSpecificity.Rd  calcDatasetSpecificityOld.Rd  calcGeneVars.H5.Rd  calcGeneVars.Rd  calcGeneVars.old.Rd  calcNMI.Rd  calcNormLoadings.Rd  calcPurity-deprecated.Rd  calcPurity.Rd  calc_dataset_specificity.Rd  calculateWilcoxon.Rd  cbind.ligerDataset.Rd  ccGeneHuman.Rd  cell.meta-liger-method.Rd  cell.meta-set-liger-method.Rd  cell.meta.Rd  cellMeta.Rd  (+244 more)
src/: Makefile  Makevars  Makevars.win  Makevars_liger  ModularityOptimizer.cpp  ModularityOptimizer.h  (+36 more)
(+456 files in other folders)
